--- a/Handout/handout.bib
+++ b/Handout/handout.bib
@@ -7,6 +7,16 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@article{rost2016openms,
+  title={OpenMS: a flexible open-source software platform for mass spectrometry data analysis},
+  author={R{\"o}st, Hannes L and Sachsenberg, Timo and Aiche, Stephan and Bielow, Chris and Weisser, Hendrik and Aicheler, Fabian and Andreotti, Sandro and Ehrlich, Hans-Christian and Gutenbrunner, Petra and Kenar, Erhan and others},
+  journal={Nature Methods},
+  volume={13},
+  number={9},
+  pages={741--748},
+  year={2016},
+  publisher={Nature Research}
+}
 
 
 @article{Griss2014,
