--- a/Handout/handout.tex
+++ b/Handout/handout.tex
@@ -197,7 +197,7 @@
 
 \begin{itemize}
 \item This handout will guide you through an introductory tutorial for the OpenMS/TOPP software package~\cite{OpenMS}.
-\item OpenMS~\cite{Sturm2008} is a versatile open-source library for mass spectrometry data analysis. Based on this library, we offer a collection
+\item OpenMS~\cite{Sturm2008,rost2016openms} is a versatile open-source library for mass spectrometry data analysis. Based on this library, we offer a collection
       of command-line tools ready to be used by end users. These so-called TOPP tools (short for ''The OpenMS Proteomics Pipeline'')~\cite{Kohlbacher2007} can be understood as
       small building blocks of arbitrary complex data analysis workflows.
 \item In order to facilitate workflow construction, OpenMS was integrated into KNIME~\cite{KNIME}, the Konstanz
